--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,18 @@ services: docker
 
 before_install:
   - docker-compose up --build -d
+  - docker login -u "$HEROKU_USERNAME" -p "$HEROKU_API_KEY" resgistry.heroku.com
 
 script: 
   - docker-compose exec --env 'RAILS_ENV=test' app rails db:create
   - docker-compose exec --env 'RAILS_ENV=test' app rails db:migrate
   - docker-compose exec --env 'RAILS_ENV=test' app rails test
+
+deploy:
+  provider: script
+  script:
+    docker build -t registry.heroku.com/$HEROKUAPP_NAME/app -f Dockerfile.prod .;
+    docker push registry.heroku.com/$HEROKU_APPNAME/app;
+    heroku run --app $HEROKU_APP_NAME rails db:migrate;
+  on:
+    branch: master
